# Fluxora-Personal-Streaming-Platform

./: .firebaserc  .gitignore  AGENT_LOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  firebase.json
apps/server/: Dockerfile  config.py  env.example  fluxora_server.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/server/database/: db.py
apps/server/models/: activity.py  client.py  group.py  library.py  log_record.py  media_file.py  notification.py  order.py  profile.py  settings.py  stream_session.py  transcoding.py
apps/server/routers/: activity.py  auth.py  deps.py  files.py  groups.py  info.py  library.py  logs.py  notifications.py  orders.py  profile.py  settings.py  signal.py  stream.py  transcoding.py  webhook.py  ws.py
apps/server/services/: activity_service.py  auth_service.py  discovery_service.py  ffmpeg_service.py  group_service.py  library_service.py  license_service.py  log_service.py  notification_service.py  profile_service.py  settings_service.py  system_stats_service.py  tmdb_service.py  transcoding_service.py  webhook_service.py  webrtc_service.py
apps/server/tests/: conftest.py  test_activity.py  test_auth.py  test_files.py  test_groups.py  test_healthz.py  test_info_actions.py  test_info_stats.py  test_library.py  test_license_service.py  test_logs.py  test_notifications.py  test_orders.py  test_profile.py  test_real_ip.py  test_sentry_init.py  test_settings.py  test_settings_extended.py  test_signal.py  test_storage_breakdown.py  test_stream.py  test_tmdb_service.py  test_transcoding.py  test_webhook.py  (+1 more)
(+351 files in other folders)
